[package]
name = "resphys"
version = "0.0.1"
authors = ["Rybek"]
readme = "README.md"
keywords = [ "physics", "2d", "real-time", "simple" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"
fxhash = "0.2.1"
petgraph = "0.5.1"
glam = {version="0.9.2", features = ["mint"]}
log = "0.4.11"

[dev-dependencies]
macroquad = "0.2.9"
simple_logger = { version = "1.6"}