[package]
name = "resphys"
version = "0.1.0"
authors = ["Rybek"]
readme = "README.md"
description = "Simple 2D AABB only game collision detection/resolution engine."
repository = "https://github.com/RybekU/Resphys"
keywords = [ "physics", "2d", "simple", "collision", "aabb"]
license = "Apache-2.0"
edition = "2018"


[dependencies]
generational-arena = "0.2.8"
fxhash = "0.2.1"
petgraph = "0.5.1"
glam = {version="0.20.2", features = ["mint"]}
log = "0.4.11"

[dev-dependencies]
macroquad = "0.2.9"
simple_logger = { version = "1.9"}